Ajustando serviço de monitoramento. O bean de infraction Não estava sendo injetado, pois estava sendo sobrescrito pelo bean de reconciliação. Adicionado mais logs para verificar execução do serviço (#277)